--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,13 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation 'androidx.compose.material:material-icons-extended'
 
     // WearOS Compose
     implementation "androidx.wear.compose:compose-material:$wear_compose_version"
     implementation "androidx.wear.compose:compose-foundation:$wear_compose_version"
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
 }
